erDiagram
    USERS ||--o{ PROPERTIES : hosts
    USERS ||--o{ BOOKINGS : "books as guest"
    PROPERTIES ||--o{ BOOKINGS : "is booked in"
    BOOKINGS ||--o{ REVIEWS : "produces up to 2"
    REVIEWS ||--o{ REVIEW_SCORES : contains
    CATEGORIES ||--o{ REVIEW_SCORES : "scored against"
    REVIEW_SCORES ||--o{ REVIEW_EVIDENCE : "backed by"
    REVIEW_SCORES ||--o| DISPUTES : "may be disputed"
    USERS ||--o{ TRUST_SCORES : "aggregated into"
    CATEGORIES ||--o{ TRUST_SCORES : "broken down by"
    USERS ||--o{ AUDIT_LOG : performs

    USERS {
        uuid id PK
        text name
        text email
        enum_array roles
        enum verification_status
    }
    PROPERTIES {
        uuid id PK
        uuid host_id FK
        text title
    }
    BOOKINGS {
        uuid id PK
        uuid property_id FK
        uuid guest_id FK
        uuid host_id FK
        date check_in
        date check_out
        enum status
    }
    CATEGORIES {
        text key PK
        text label
        boolean evidence_allowed
    }
    REVIEWS {
        uuid id PK
        uuid booking_id FK
        enum direction
        uuid reviewer_id FK
        uuid reviewee_id FK
        enum status
        timestamp reveal_deadline
        timestamp revealed_at
    }
    REVIEW_SCORES {
        uuid id PK
        uuid review_id FK
        text category_key FK
        int score
        text note
        boolean excluded_from_aggregate
    }
    REVIEW_EVIDENCE {
        uuid id PK
        uuid review_score_id FK
        text file_url
    }
    DISPUTES {
        uuid id PK
        uuid review_score_id FK
        uuid raised_by FK
        enum status
        text explanation
    }
    TRUST_SCORES {
        uuid user_id FK
        text category_key FK
        numeric avg_score
        int review_count
    }
    AUDIT_LOG {
        uuid id PK
        uuid actor_id FK
        text action
        text entity_type
    }
